Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58392

[REG: 4-5] popup of QComboBox is shown on wrong screen in multi screen setups

    XMLWordPrintable

Details

    Description

      To reproduce, you need to have each monitor to not be part of the same virtual desktop. For example, you could use Xephyr to simulate this:

       Xephyr +extension RANDR -screen 720x900 -screen 720x900 -ac :2 

      Then run attached example and try to open combobox menu.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            poikelin Joni Poikelin
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes